--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="root" />
-        <script src="bundle.js"></script>
+        <div id="root" version="<%= htmlWebpackPlugin.options.version %>" />
     </body>
 </html>
